# et-volpulse

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: energy_shares.csv  tickers.yml
et_vol_pulse/: __init__.py  app.py  data_feed.py  liquidity.py  metrics.py  report.py  validation.py  weights.py
tests/: conftest.py  test_data_feed.py  test_metrics.py  test_validation.py
